--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   # Install dependencies and build Node.js application
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build','-t','us-central1.docker.pkg.dev/$PROJECT_ID/noderepository/noderepository:v1','.']
+  args: ['build','-t','us-central1.docker.pkg.dev/gcpproject-410115/noderepository/noderepository:v1','.']
 images:
-- "us-central1.docker.pkg.dev/$PROJECT_ID/noderepository/noderepository:v1"
+- "us-central1.docker.pkg.dev/gcpproject-410115/noderepository/noderepository:v1"
