--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,12 @@
 steps:
-  # Install dependencies and build Node.js application
-- name: 'gcr.io/cloud-builders/mvn'
-  args: ['install']
+ - name: 'gcr.io/cloud-builders/docker'
+   entrypoint: 'bash'
+   args: ['-c', 'docker login --username=vengal0235@gmail.com --password=Tipstat0160@']
+   secretEnv: ['USERNAME', 'PASSWORD']
+ - name: 'gcr.io/cloud-builders/docker'
+   entrypoint: 'bash'
+   args: ['-c', 'docker build -t gcpproject-410115/myrepo:v1 .']
+   secretEnv: ['vengal0235@gmail.com']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build','-t','us-east1.docker.pkg.dev/gcpproject-410115/myrepo/myrepo:v1','.']
 images:
