--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
  - name: 'gcr.io/cloud-builders/docker'
    entrypoint: 'bash'
    args: ['-c', 'docker build -t gcpproject-410115/myrepo:v1 .']
-   secretEnv: ['vengal0235@gmail.com']
+   secretEnv: ['USERNAME']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build','-t','us-east1.docker.pkg.dev/gcpproject-410115/myrepo/myrepo:v1','.']
 images:
