--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,8 +3,6 @@ steps:
    entrypoint: 'bash'
    args: ['-c', 'docker login --username=vengal0235@gmail.com --password=Tipstat0160@']
  - name: 'gcr.io/cloud-builders/docker'
-   entrypoint: 'bash'
-   args: ['-c', 'docker build -t vengal0235@gmail.com/myrepo/repo:v1 .']
- - name: 'gcr.io/cloud-builders/docker'
-   entrypoint: 'bash'
-   args: ['-c', 'docker push vengal0235@gmail.com/myrepo/repo:v1']
+   args: [ 'build', '-t', 'us-east1-docker.pkg.dev/gcpproject-410115/myrepo/myrepo/v1', '.' ]
+   images:
+   - 'us-east1-docker.pkg.dev/gcpproject-410115/myrepo/myrepo/v1'
