--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-   entrypoint: 'bash'
-   args: ['-c', 'docker login --username=vengal0235@gmail.com --password=Tipstat0160@']
-- name: 'gcr.io/cloud-builders/docker'
-   args: [ 'build', '-t', 'us-east1-docker.pkg.dev/gcpproject-410115/myrepo/myrepo/v1', '.' ]
+  args: [ 'build', '-t', 'gcr.io/gcpproject-410115/myrepo/myrepo/v1', '.' ]
 images:
-- 'us-east1-docker.pkg.dev/gcpproject-410115/myrepo/myrepo/v1'
+- 'gcr.io/gcpproject-410115/myrepo/myrepo/v1'
