--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/gcpproject-410115/myrepo/myrepo/v1', '.' ]
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'gcr.io/gcpproject-410115/myrepo/myrepo/v1']
 images:
 - 'gcr.io/gcpproject-410115/myrepo/myrepo/v1'
