--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,6 +2,6 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '-t', 'gcr.io/gcpproject-410115/gcr.io/myrepo/v1', '.' ]
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'gcr.io/gcpproject-410115/myrepo/gcr.io/v1']
+  args: [ 'push', 'gcr.io/gcpproject-410115/gcr.io/myrepo/v1']
 images:
 - 'gcr.io/gcpproject-410115/gcr.io/myrepo/v1'
