--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
+ "name": "nodejsexamples",
+  "version": "1.0.0",
+  "description": "This Project explains all Node JS examples",
+  "main": "server.js",
+  "publishConfig": {
+    "registry": "http://15.206.148.72:8081/repository/nodejsmss/"
+  },
+  
+  "scripts": {
+    "server": "http-server -c-1 -p 9999",
+    "start1": "nodemon server.js",
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+
+  
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
-  },
-   "scripts": {
-        "start": "node server.js"
-    },
+  }
 }
